# pdp-project

./: .gitignore  README.md  descServ.json  pyproject.toml
app/: main.py
booking_london_predict/: .gitignore  Booking_Project_Questions.xlsx  EasyTip Platform - Integration Guide.docx  README.md  _chat_db.py  _db.py  admin.py  app.py  appointmentService.py  categories.py  create_superadmin.py  crm_retry_queue.py  employees.py  freetime.py  mailchimp_service.py  package-lock.json  package.json  requirements.txt  save_appointment_record.py  services.py  servicesThree.py  sync_zenoti_to_crm.py
deploy/: 01_server_setup.sh  02_app_install.sh  03_deploy.sh  04_dump_local_db.sh  05_systemd_nginx_ssl.sh  06_telegram_webhook.sh  07_cron_sync.sh  08_wipe_old_booking.sh  09_booking_deploy.sh  10_booking_install.sh  11_booking_ssl.sh  12_booking_cron.sh  README.md  aichat-worker.service  aichat.service  booking.env.template  nginx.conf  nginx_booking.conf  pdpbooking.service
docs/: AI_CHAT_PITCH.md
examples/: CANCELLATION_FLOW.md  CORE_INSTRUCTIONS.md  appointments.py  beauty_bot.py  categories.json  categories.py  clients.py  clients_search.json  config.py  dialogue_examples.jsonl  employees.json  employees.py  final_dialogues_merged.txt  freetime.json  freetime.py  products.json  products.py  salons.json  services.json  services.py
scripts/: _profile_expert_prompt.py  add_robolex_translations.py  aggregate_profile_content.py  apply_profile_content.py  apply_profiles_v3.py  auto_link_missing_keys.py  backfill_service_attributes.py  beauty_expert_fill.py  cleanup_profiles.py  (+93 more)
(+270 files in other folders)
